--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -1,3 +1,3 @@
-= @room.name
+= current_room.name
 
-= render 'messages/form', message: @room.messages.build(user: current_user)
+= render 'messages/form'
