--- a/app/views/issues/_form.html.slim
+++ b/app/views/issues/_form.html.slim
@@ -1,3 +1,7 @@
-= form_with model: Issue.new do |f|
-  = f.text_field :issue_number
-  = f.submit
+.card
+  .card-content
+    = form_with model: Issue.new do |f|
+      .input-field
+        = f.text_field :issue_number
+        = f.label :issue_number
+      = f.submit 'Create', class: 'btn waves-effect waves-light'
