--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,18 @@
   </head>
 
   <body>
+    <nav>
+      <div class="nav-wrapper">
+        <div class="brand-logo">
+          <%= content_for?(:room_name) ? yield(:room_name) : "" %>
+        </div>
+        <ul class="right">
+          <li><%= content_for?(:user_name) ? yield(:user_name) : "" %></li>
+          <li>nav微妙</li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="container">
       <div class="row">
         <%= yield %>
