--- a/app/views/issues/create.js.erb
+++ b/app/views/issues/create.js.erb
@@ -1,1 +1,1 @@
-$('#issues').html('<%=j render partial: "issue", locals: { issue: @issue } %>');
+$('#issues').prepend('<%=j render partial: "issue", locals: { issue: @issue } %>');
