--- a/app/views/rooms/new.html.slim
+++ b/app/views/rooms/new.html.slim
@@ -14,7 +14,7 @@
 .col.s6
   .card
     .card-content
-      span.card-title Find Room
+      span.card-title Join Room
       = form_with url: rooms_path, method: :get, local: true do |f|
         .input-field
           = f.number_field :id
