--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -1,3 +1,5 @@
+= javascript_pack_tag 'rooms/show'
+
 - content_for(:room_name) { current_room.name }
 - content_for(:user_name) { current_user.name }
 
