--- a/app/views/issues/_form.html.slim
+++ b/app/views/issues/_form.html.slim
@@ -1,7 +1,9 @@
+= javascript_pack_tag 'issues/form'
+
 .card
   .card-content
-    = form_with model: Issue.new do |f|
+    = form_with model: Issue.new, html: { id: "issue-form", "v-on:submit.stop.prevent": "createIssue" } do |f|
       .input-field
-        = f.text_field :issue_number
+        = f.text_field :issue_number, "v-model": "issue.issue_number"
         = f.label :issue_number
       = f.submit 'Create', class: 'btn waves-effect waves-light'
