Show estimates button

--- a/app/views/issues/_form.html.slim
+++ b/app/views/issues/_form.html.slim
@@ -14,4 +14,16 @@
       .card-content
         span.card-title
           == '{{ issue.issue_number }}'
-        //= render 'estimates/form'
+      .card-action
+        ul.estimates
+          li
+            a.waves-effect.waves-light.btn-small 0
+          li
+            a.waves-effect.waves-light.btn-small 1
+          li
+            a.waves-effect.waves-light.btn-small 2
+          li
+            a.waves-effect.waves-light.btn-small 3
+          li
+            a.waves-effect.waves-light.btn-small 5
+
