Exclude user not in the room

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head
+    <%= yield(:header_attributes) %>
+    >
     <title>PlanningPoke</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
