Notify new issue

--- a/app/views/rooms/new.html.slim
+++ b/app/views/rooms/new.html.slim
@@ -22,4 +22,4 @@
         .input-field
           = f.text_field :password
           = f.label :password
-        = f.submit 'Find', class: 'btn waves-effect waves-light'
+        = f.submit 'Join!', class: 'btn waves-effect waves-light'
