--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -5,4 +5,4 @@
         .input-field
           = f.text_field :name, class: 'input-field'
           = f.label :name
-        = f.submit 'Create', class: 'btn waves-effect waves-light'
+        = f.submit 'Create User', class: 'btn waves-effect waves-light'
