--- a/app/views/issues/_form.html.slim
+++ b/app/views/issues/_form.html.slim
@@ -16,6 +16,15 @@
         span.card-title
           == '{{ issue.issue_number }}'
       .card-action
+        .estimate-aggregate v-show="issue.done"
+          .estimate v-for="estimate in issue.estimates"
+            .user
+              user
+              == '{{ estimate.user_id }}'
+            .point
+              point
+              == '{{ estimate.point }}'
+
         ul.estimates
           / TODO: ハッシュ用意しておく
           / TODO: 選んだものをactiveにしたい
