--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -4,4 +4,9 @@
     "data-current-room-id=#{current_room.id}" \
   }
 
+p
+  | UUIDとパスワード付きのリンク置きたい
+p
+  = current_room.uuid
+
 = render 'issues/form'
