--- a/app/assets/stylesheets/issues.sass
+++ b/app/assets/stylesheets/issues.sass
@@ -1,2 +1,9 @@
 .card.issue
   min-width: 400px
+.done-estimate
+  .user
+    display: inline-block
+    font-weight: bold
+  .point
+    margin-left: 4px
+    display: inline-block
