--- a/app/views/rooms/new.html.slim
+++ b/app/views/rooms/new.html.slim
@@ -9,7 +9,7 @@
         .input-field
           = f.text_field :password
           = f.label :password
-        = f.submit 'Create', class: 'btn waves-effect waves-light'
+        = button_tag 'Create', class: 'btn waves-effect waves-light'
 
 .col.s6
   .card
@@ -22,4 +22,4 @@
         .input-field
           = f.text_field :password
           = f.label :password
-        = f.submit 'Join!', class: 'btn waves-effect waves-light'
+        = button_tag 'Join!', class: 'btn waves-effect waves-light'
