--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -17,6 +17,39 @@
   .card
     .card-content
       span.card-title
+        | この部屋の残り時間
+      p
+        | 表示したい
+      p
+        | issue作ったりしないと30分で強制退出です
+  .card
+    .card-content
+      span.card-title
         | この部屋にいる人
       p
         | を表示したいね...
+  .card
+    .card-content
+      span.card-title
+        | tips
+      p
+        | 0.5は0で代用してください
+  .card
+    .card-content
+      span.card-title
+        | issueのカードに
+      p
+        | xxxは完了yyyは未完了を出したい...
+  .card
+    .card-content
+      span.card-title
+        | issueのカードに
+      p
+        | xxxは完了yyyは未完了を出したい...
+  .card
+    .card-content
+      span.card-title
+        | 自分が完了したら
+      p
+        | カードの色を変えたい...
+
