Show sharing url

--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -11,9 +11,9 @@
   .card
     .card-content
       span.card-title
-        | UUID
+        | Sharing link
       p
-        = current_room.uuid
+        = sharing_link(current_room)
   .card
     .card-content
       span.card-title
