Redirect after logged in

--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -11,7 +11,7 @@
   .card
     .card-content
       span.card-title
-        | Sharing link
+        | Sharing link (クリップボードにコピーボタンが欲しい)
       p
         = sharing_link(current_room)
   .card
